<resources>
    <string name="app_name">Tour Mate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">USERNAME</string>
    <string name="email_id">Email ID</string>
    <string name="password">PASSWORD</string>
    <string name="password1">Password</string>
    <string name="have_no_account_signup">Have no Account? SignUp</string>
    <string name="go">GO</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms_conditions"><![CDATA[By creating an account you agree to our Terms & Conditions and Privacy Policy]]></string>
    <string name="email">Email</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="weather">Weather</string>
    <string name="nearby">Nearby</string>
    <string name="trips">Trips</string>
    <string name="task">Task</string>
    <string name="tour_contact">Tour Contact</string>
    <string name="home">Home</string>
    <string name="memories">Memories</string>
    <string name="wallet">Wallet</string>
    <string name="logout">Logout</string>
    <string name="add_trip">Add trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="trip_start_date">Trip Start Date</string>
    <string name="trip_end_date">Trip End Date</string>
    <string name="save_your_trip">Save Your Trip</string>
    <string name="trip_description">Trip Description</string>
    <string name="trip_details">Trip Details</string>
    <string name="camera">Camera</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
