<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/navigation_trip"
            android:icon="@drawable/trip"
            android:title="@string/trips" />
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/nearby"
            android:title="@string/nearby" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/weather"
            android:title="@string/weather" />
    </group>

    <item android:title="Planner">
        <menu>
            <item
                android:id="@+id/nav_task"
                android:icon="@drawable/task"
                android:title="@string/task" />
            <item
                android:id="@+id/nav_tour_contact"
                android:icon="@drawable/tour_contact"
                android:title="@string/tour_contact" />
        </menu>
    </item>

</menu>
