<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorbg"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".EditTripFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_trip"
        android:textAllCaps="true"
        android:textColor="@color/colorwhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_name"
        android:textAllCaps="true"
        android:textColor="@color/colorwhite"
        android:textSize="10sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_name"
        android:inputType="text"
        android:textColorHint="@color/colorwhite"
        android:textColor="@color/colorwhite"
        android:backgroundTint="@color/colorwhite"
        android:drawableStart="@drawable/trip"
        android:id="@+id/editevent_tripnameET"
        android:drawablePadding="10dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_description"
        android:textAllCaps="true"
        android:textColor="@color/colorwhite"
        android:textSize="10sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_description"
        android:textColorHint="@color/colorwhite"
        android:textColor="@color/colorwhite"
        android:backgroundTint="@color/colorwhite"
        android:drawableStart="@drawable/cmnt"
        android:id="@+id/editevent_tripdesET"
        android:inputType="textShortMessage"
        android:drawablePadding="10dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_start_date"
        android:textAllCaps="true"
        android:textColor="@color/colorwhite"
        android:layout_marginTop="10dp"
        android:textSize="10sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_start_date"
        android:textColorHint="@color/colorwhite"
        android:backgroundTint="@color/colorwhite"
        android:textColor="@color/colorwhite"
        android:drawableLeft="@drawable/datepicker"
        android:inputType="none"
        android:keyboardNavigationCluster="false"
        android:id="@+id/editevent_tripstartET"
        android:drawablePadding="10dp"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_end_date"
        android:textAllCaps="true"
        android:textColor="@color/colorwhite"
        android:layout_marginTop="10dp"
        android:textSize="10sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trip_end_date"
        android:textColorHint="@color/colorwhite"
        android:backgroundTint="@color/colorwhite"
        android:textColor="@color/colorwhite"
        android:drawableLeft="@drawable/datepicker"
        android:inputType="none"
        android:keyboardNavigationCluster="false"
        android:id="@+id/editevent_tripendET"
        android:drawablePadding="10dp"
        android:gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_your_trip"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorwhite"
        android:id="@+id/editevent_savetripbtn"
        android:background="@color/colorPrimary"/>


</LinearLayout>